--- a/resources/build
+++ b/resources/build
@@ -29,3 +29,9 @@ apk del --no-cache \
 
 addgroup  -S keycloak
 adduser -S -D -H gatekeeper
+
+# CIS Benchmarking
+touch /etc/login.defs
+chmod 0444 /etc/login.defs
+
+chmod 0600 /etc/shadow
